spade-tests/src/snapshots/spade_tests__parser__multiple_resets_triggers_error.snap
---
source: spade-tests/src/parser.rs
---
entity main() -> bool {
    reg(clk) a reset(true: 0) reset(true: 0) = true;
    true
}

error: Multiple resets specified
  ┌─ testinput:2:37
  │
2 │     reg(clk) a reset(true: 0) reset(true: 0) = true;
  │                      -------        ^^^^^^^ Second reset
  │                      │               
  │                      First reset

error: Output type mismatch. Expected bool, got ()
  ┌─ testinput:1:23
  │  
1 │   entity main() -> bool {
  │                    ---- bool type specified here
  │ ╭───────────────────────^
2 │ │     reg(clk) a reset(true: 0) reset(true: 0) = true;
3 │ │     true
4 │ │ }
  │ ╰─^ Found type ()
  │  
  = note: Expected: bool
               Got: ()
