spade-tests/src/snapshots/spade_tests__parser__negated_single_tuple_span_correct.snap
---
source: spade-tests/src/parser.rs
---
entity x() -> uint<8> {
    !(false)
}


error: Output type mismatch. Expected uint<8>, got bool
  ┌─ testinput:1:23
  │  
1 │   entity x() -> uint<8> {
  │                 ------- uint<8> type specified here
  │ ╭───────────────────────^
2 │ │     !(false)
  │ │      ------- Type bool inferred here
3 │ │ }
  │ ╰─^ Found type bool
  │  
  = note: Expected: uint<8>
               Got: bool
