spade-tests/src/snapshots/spade_tests__parser__negative_tuple_index_error.snap
---
source: spade-tests/src/parser.rs
---
fn a() -> int<10> {
    x#-10
}

error: Tuple indices must be non-negative
  ┌─ testinput:2:7
  │
2 │     x#-10
  │       ^^^ Negative tuple index
