spade-tests/src/snapshots/spade_tests__parser__no_space_subtraction_works.snap
---
source: spade-tests/src/parser.rs
assertion_line: 148
---
fn a(b: int<2>) -> int<2> {
    trunc(b-1)
}


