spade-tests/src/snapshots/spade_tests__parser__non_extern_unit_must_have_body.snap
---
source: spade-tests/src/parser.rs
---
entity foo();


error: This entity is missing a body
  ┌─ testinput:1:1
  │
1 │ entity foo();
  │ ^^^^^^^^^^^^
  │
  = Did you forget to add the entity's body?
  │
1 │ entity foo() {}
  │             ~~~
  = Or did you mean to declare an `extern` entity?
  │
1 │ extern entity foo();
  │ +++++++
